# By utilizing pyproject.toml,
# Python projects can maintain a standardized approach
# to configuration and dependency management,
# providing a consistent and predictable environment for developers and users alike.

[tool.poetry]  # metadata about the project
name = "auto-trader"
version = "0.1.0"
description = "Automated Trading System"
authors = ["Auto Trader Team"]

[tool.poetry.dependencies]
python = "~3.11"  # 3.11 series of Python

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
line_length = 88
include_trailing_comma = true
multi_line_output = 3
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.black]
line-length = 88
target-version = ['py311']
skip-string-normalization = true
