# By utilizing pyproject.toml,
# Python projects can maintain a standardized approach
# to configuration and dependency management,
# providing a consistent and predictable environment for developers and users alike.

[project]
name = "auto-trader"
version = "0.1.0"
description = "Automated Trading System"
authors = [
    {name = "Auto Trader Team"}
]
requires-python = ">=3.11,<3.12"
dependencies = [
    "black==22.12.0",
    "isort==5.13.2",
    "nbformat==5.10.4",
    "pre-commit==3.7.1",
    "python-dotenv==1.0.1",
    "pandas==2.2.2",
    "GitPython==3.1.43",
    "websockets==13.0.1",
    "pycryptodome==3.20.0",
    "requests==2.32.3",
    "pyyaml==6.0.2",
    "python-kis==2.0.3",
    "slack-sdk==3.33.0",
    "streamlit>=1.50.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["auto_trader"]

[tool.isort]
profile = "black"
line_length = 88
include_trailing_comma = true
multi_line_output = 3
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.black]
line-length = 88
target-version = ['py311']
skip-string-normalization = true
